# Aceey

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
docs/: CNAME  index.html  main.js  style.css  updates.html
src/: App.vue  index.html  main.js  store.js  style.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: calendar.rs  compiler.rs  debug_agent.rs  main.rs
src/components/: CalendarView.vue  EditorPane.vue  PlanReviewModal.vue  RatingModal.vue  SettingsView.vue  Sidebar.vue  StatusBar.vue  TestCasePanel.vue  calendarState.js
