[package]
name = "aceey"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
